# hoot-app

./: .gitignore  Cargo.toml  Makefile  shell.nix
src/: account_manager.rs  error.rs  mail_event.rs  main.rs  pool.rs  relay.rs
src/keystorage/: linux.rs  macos.rs  mod.rs
src/nostr/: mod.rs
src/nostr/event/: id.rs  mod.rs
src/nostr/event/tag/: list.rs  mod.rs
src/relay/: message.rs  mod.rs  pool.rs  subscription.rs
src/ui/: compose_window.rs  mod.rs  onboarding.rs  settings.rs
src/wagie/: mod.rs
