[package]
name = "hoot-app"
version = "0.1.0"
authors = ["Jack Chakany <jack@chakany.systems>"]
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.27.2", features = ["default", "puffin"] }
egui_extras = { version = "0.27.2", features = [
    "file",
    "image",
    "svg",
    "puffin",
] }
image = { version = "0.25.1", features = ["jpeg", "png"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
yandk = { path = "../yandk", features = ["coordinator"] }
puffin = "0.19.0"
puffin_http = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }
