[package]
name = "hoot-app"
version = "0.1.0"
authors = ["Jack Chakany <jack@chakany.systems>"]
edition = "2021"
publish = false

[features]
profiling = ["dep:puffin", "dep:puffin_http", "eframe/puffin", "egui_extras/puffin"]

[dependencies]
eframe = { version = "0.27.2", features = ["default", "persistence"] }
egui_extras = { version = "0.27.2", features = [
    "file",
    "image",
    "svg",
] }
image = { version = "0.25.1", features = ["jpeg", "png"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
puffin = { version = "0.19.0", optional = true }
puffin_http = { version = "0.16.0", optional = true }
ewebsock = { version = "0.6.0", features = ["tls"] }
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", rev = "ee8afeeb0b6695fca6d27dd0b74a8dc159e37b95" }
rand = "0.8.5"
nostr = { version = "0.32.1", features = ["std"] }
serde = "1.0.204"
serde_json = "1.0.121"
